--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>James P. Hart | Professional Page</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -48,10 +48,8 @@
                     </div>
                     <p class="lead mb-5">I am a national security and foreign policy professional, a former U.S. Army pilot, an avid sports fan, and an experienced world traveler. I am passionate about service and making a difference. I love to learn, and I constantly seek new challenges.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/james-p-hart"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/jph342"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -67,6 +65,14 @@
                             <p>Principal advisor to a United States senator on matters related to the armed services, foreign policy, intelligence, veterans affairs, and homeland security</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Co-Founder</h3>
+                            <div class="subheading mb-3">WayPoint Homes, LLC</div>
+                            <p><a href="https://www.WayPoint.homes">WayPoint Homes</a> helps elligible homebuyers find select sellers who have high-principle, low interest home loans. Our primary customer base is US military veterans who are elligble to VA-secured loans with no downpayment.</p>
+                        </div><!-- I used ChatGPT to help me remember how to make a word inside of a paragraph tab a hyperlink -->
+                        <div class="flex-shrink-0"><span class="text-primary">August 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
