--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
                     <ul class="fa-ul mb-0 space-bottom">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1<sup>st</sup> Place - McDonough School of Business - Rocket Pitch Competition 2024
+                            1<sup>st</sup> Place - McDonough School of Business - Rocket Pitch Competition 2024 for <a href="https://www.WayPoint.homes">WayPoint Homes</a> 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3<sup>rd</sup> Place - McDonough School of Business "Bark Tank" Pitch Competition 2023
+                            3<sup>rd</sup> Place - McDonough School of Business "Bark Tank" Pitch Competition 2023 for SoleStep
                         </li>
                         <li>
                             Bronze Star Medal for Combat Service 2015
