--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/james-p-hart"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/jph342"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/jamesh342/"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
