--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- JPH: I used a start bootstrap theme to build this site, and simply customized the content and some of the asethetic aspects. 
+    The theme is available here: https://startbootstrap.com/theme/resume. 
+    See Style Sheet header for more information.-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -44,13 +48,14 @@
                     </h1>
                     <div class="subheading mb-5">
                         Washington D.C. · (919) 949-0109 ·
-                        <a href="mailto:name@email.com">jphart3@gmail.com</a>
+                        <a href="mailto:jphart3@gmail.com">jphart3@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a national security and foreign policy professional, a former U.S. Army pilot, an avid sports fan, and an experienced world traveler. I am passionate about service and making a difference. I love to learn, and I constantly seek new challenges.</p>
+                    <p class="lead mb-5">I am a national security and foreign policy professional, a former U.S. Army pilot, an avid sports fan, and an experienced world traveler. 
+                        I am passionate about service and making a difference. I love to learn, and I constantly seek new challenges.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/james-p-hart"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/jph342"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/jamesh342/"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://github.com/jph342"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,7 +68,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">National Security Advisor</h3>
                             <div class="subheading mb-3">United States Senate</div>
-                            <p>Principal advisor to a United States senator on matters related to the armed services, foreign policy, intelligence, veterans affairs, and homeland security</p>
+                            <p>Principal advisor to a United States senator on matters related to the armed services, foreign policy, intelligence, veterans affairs, and homeland security. Assist the senator in carrying out his duties as a member of the Senate Committee on Armed Services,
+                                including its subcommittees on Cybersecurity, Seapower, and Emerging Threats and Capabilities.
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present</span></div>
                     </div>
@@ -71,8 +78,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Co-Founder</h3>
                             <div class="subheading mb-3">WayPoint Homes, LLC</div>
-                            <p><a href="https://www.WayPoint.homes">WayPoint Homes</a> helps elligible homebuyers find select sellers who have high-principle, low interest home loans. Our primary customer base is US military veterans who are elligble to VA-secured loans with no downpayment.</p>
-                        </div><!-- I used ChatGPT to help me remember how to make a word inside of a paragraph tab a hyperlink -->
+                            <p><a href="https://www.WayPoint.homes">WayPoint Homes</a> helps elligible homebuyers find oppotunities to purchase homes and assume loans from sellers who have high-principle, low interest home loans. 
+                                Our primary customer base is US military service members and veterans who are elligble for VA-secured loans with no downpayment, and who move often due to the nature of their employment.</p>
+                        </div>
+                        <!-- I used ChatGPT here to help me remember how to make a word inside of a paragraph tab a hyperlink -->
                         <div class="flex-shrink-0"><span class="text-primary">August 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -85,9 +94,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Officer and Senior Aviator</h3>
+                            <h3 class="mb-0">Officer and Senior Army Aviator</h3>
                             <div class="subheading mb-3">United States Army</div>
-                            <p>Diverse military career consisting of unit command at multiple echelons, combat leadership, and strategic liaison at the highest levels of the United States government. Selected ahead of thousands of peers for prestigious and demanding Congressional Fellowship program.</p>
+                            <p>Diverse military career consisting of Attack Helicopter unit command at multiple echelons, combat leadership, and strategic liaison at the highest levels of the United States government. Selected ahead of thousands of peers for prestigious and demanding Congressional Fellowship program.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2008 - December 2021</span></div>
                     </div>
@@ -130,8 +139,12 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>My favorite aspects of my job in national security and foregin policy involve international travel and coalition-building. I relish the opportunity to solve
+                        intricate puzzles of the interrelated and often conflicting interests of numerous stakeholders.
+                    </p>
+                    <p class="mb-0">Outside of work, I love to play golf, and you can find me on a course most weekends. I also enjoy watching sports. My favorite teams are Army for all things college, 
+                        the Carolina Panthers, and the Atlanta Braves. I also love to watch professional golf.
+                        Finally, I enjoy relaxing with my fiancee and our dog at home in DC.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -167,6 +180,9 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             FAA Licensed Commercial Rotorcraft Pilot 
+                        </li>
+                        <li>
+                            Senior Army Aviator Badge: >1,000 flight hours in Army aircraft
                         </li>
                         <li>
                             AH-64D Pilot in Command and Air Mission Commander
